# No-Regret-Market-Maker

./: .gitignore  CMakeLists.txt  README.md  config.yaml  requirements.txt  setup.py
.github/workflows/: ci.yml
analysis/: adaptation_plots.py  adaptation_speed.csv  convergence_plots.py  convergence_regret.csv  pnl_comparison.csv  pnl_comparison.py  regret_decomposition.csv  regret_decomposition_plots.py
cpp/bindings/: py_lob.cpp
cpp/lob/: market_participant.hpp  matching_engine.cpp  matching_engine.hpp  order.hpp  order_book.cpp  order_book.hpp
notebooks/: run_everything.py
python/: __init__.py
python/algorithms/: __init__.py  adversarial_trader.py  avellaneda_stoikov.py  exp3.py  exp4.py  fixed_spread_mm.py
python/analysis/: __init__.py  adaptation_plots.py  convergence_plots.py  pnl_comparison.py
python/evaluation/: __init__.py  adaptation_metrics.py  benchmarker.py  regret_decomposer.py  regret_tracker.py
python/simulation/: __init__.py  data_pipeline.py  market_simulator.py  python_lob_stub.py  regime_generator.py  synthetic_lob.py
tests/: test_adaptation_metrics.py  test_adversarial_trader.py  test_as_model.py  test_data_pipeline.py  test_exp3_convergence.py  test_exp4_experts.py  test_lob_mechanics.py  test_regime_generator.py  test_regret_decomposition.py
writeup/: cfr_connection.tex  lower_bound.tex  regret_bound.tex
